WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283985
Ensure third party frames do not have cookie access from Cookie Store API change listener
https://bugs.webkit.org/show_bug.cgi?id=283985
Summary
Ensure third party frames do not have cookie access from Cookie Store API cha...
rupin
Reported
2024-12-03 12:02:42 PST
Ensure third party frames do not have cookie access from Cookie Store API change listener
Attachments
Add attachment
proposed patch, testcase, etc.
rupin
Comment 1
2024-12-03 12:04:09 PST
rdar://140446608
rupin
Comment 2
2024-12-03 12:09:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37382
EWS
Comment 3
2024-12-06 15:39:50 PST
merge-queue failed to commit PR to repository. To retry, remove any blocking labels and re-apply merge-queue label
EWS
Comment 4
2024-12-06 15:44:33 PST
Committed
287462@main
(0df5a7c46418): <
https://commits.webkit.org/287462@main
> Reviewed commits have been landed. Closing PR #37382 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug